Extract the mobile emulation settings creation into a method